samples/_failures_safe/1761345960_b95ef5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff1578bc.c: In function ‘main’:
./samples/SAFE/__tmp_ff1578bc.c:144:32: error: expected ‘)’ at end of input
  144 |         if (parse_log_line(line
      |                           ~    ^
      |                                )
./samples/SAFE/__tmp_ff1578bc.c:144:13: error: too few arguments to function ‘parse_log_line’
  144 |         if (parse_log_line(line
      |             ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ff1578bc.c:38:5: note: declared here
   38 | int parse_log_line(const char* line, LogEntry* entry) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ff1578bc.c:144:9: error: expected declaration or statement at end of input
  144 |         if (parse_log_line(line
      |         ^~
./samples/SAFE/__tmp_ff1578bc.c:144:9: error: expected declaration or statement at end of input
